# docs/swagger.json
@@ -136,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/lib.User"
+                            "$ref": "#/definitions/lib.RegisterRequest"
                         }
                     }
                 ],
@@ -203,7 +203,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/lib.UserRole"
+                            "$ref": "#/definitions/lib.RegisterRequest"
                         }
                     }
                 ],
@@ -917,6 +917,11 @@
         },
         "/orders/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve order summary for the Payment Page",
                 "consumes": [
                     "application/json"
@@ -973,6 +978,11 @@
         },
         "/orders/{id}/payment": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Step 3: Submit personal info and payment method to complete the order",
                 "consumes": [
                     "application/json"
@@ -1038,6 +1048,11 @@
         },
         "/orders/{id}/ticket": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve the final ticket summary for a specific order",
                 "consumes": [
                     "application/json"
@@ -1688,6 +1703,21 @@
                 }
             }
         },
+        "lib.RegisterRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "lib.ResetPasswordRequest": {
             "type": "object",
             "properties": {
@@ -1793,17 +1823,6 @@
                 },
                 "point": {
                     "type": "integer"
-                }
-            }
-        },
-        "lib.UserRole": {
-            "type": "object",
-            "properties": {
-                "role_id": {
-                    "type": "integer"
-                },
-                "user": {
-                    "$ref": "#/definitions/lib.User"
                 }
             }
         }
